--- a/src/common/globalStyles.css
+++ b/src/common/globalStyles.css
@@ -61,10 +61,21 @@
   color: red;
 }
 
+.welcomeBack {
+  font-size: 18px;
+  font-weight: 700;
+  margin: 1em 0;
+}
+
 .modalContainer {
   border: 1px black;
-  height: 24em;
-  width: 24em;
+  height: 50%;
+  width: 50%;
+  top: 50%;
+  left: 50%;
+  position: relative;
+  transform: translate(-50%, -50%);
+  
 }
 
 table {
@@ -194,5 +205,23 @@ body {
 }
 
 .pageItem:hover {
+  cursor: pointer;
+}
+.submitButton {
+  border-radius: 4px;
+  padding: 6px 8px;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: #a895e7;
+  outline: none;
+}
+
+.modalItems {
+  background-color: white;
+  padding: 20px;
+}
+
+.crossImg {
+  width: 20px;
+  height: 20px;
   cursor: pointer;
 }
